Styling of the form elements on the booking page has began for desktop viewing - Input and label elements have been aligned to fit onto the form correctly with some being displayed inline

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -943,11 +943,9 @@ h1, h2 {
     flex-flow: wrap;
 
     width: 100%;
-    height: 75%;
+    height: 60%;
 
     margin-top: 1%;
-
-    background-color: red;
 }
 
 #booking_form {
@@ -956,8 +954,12 @@ h1, h2 {
     padding-left: 15px;
 }
 
+.booking_form_elements {
+    margin-top: 2%;
+}
+
 .booking_form_elements label {
-    font-size: 105%;
+    font-size: 140%;
 }
 
 .booking_form_elements > input {
@@ -966,7 +968,7 @@ h1, h2 {
     font-size: 140%;
     font-family: Mate SC, sans-serif;
     margin-top: 1%;
-    padding: 3px 3px;
+    padding: 3px;
 }
 
 .booking_form_elements_adjacent {
@@ -975,15 +977,18 @@ h1, h2 {
 }
 
 .booking_form_elements_adjacent label {
-    font-size: 105%;
+    font-size: 140%;
 }
 
 .booking_form_elements_adjacent > input {
     height: 30px;
     font-size: 140%;
     font-family: Mate SC, sans-serif;
-    margin-top: 1%;
-    padding: 3px 3px;
+}
+
+.adjacent_second {
+    float: right;
+    width: 41%;
 }
 
 .small_screen_bookings {
